<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <properties>
    <maven.compiler.target>1.7</maven.compiler.target>
    <maven.compiler.source>1.7</maven.compiler.source>
  </properties>
  <groupId>org.cloudi.examples.tutorial</groupId>
  <artifactId>cloudi_tutorial_java</artifactId>
  <packaging>jar</packaging>
  <version>1.7.6</version>
  <name>cloudi_tutorial_java</name>
  <url>http://www.cloudi.org</url>
  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Bruce Kissinger</name>
    </developer>
    <developer>
      <name>Michael Truog</name>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git@github.com:CloudI/tutorial_book_service_example.git</connection>
    <developerConnection>scm:git:git@github.com:CloudI/tutorial_book_service_example.git</developerConnection>
    <url>git@github.com:CloudI/tutorial_book_service_example.git</url>
  </scm>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <configuration>
          <outputDirectory>
            ${project.build.directory}
          </outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>org.cloudi.examples.tutorial.Main</mainClass>
            </manifest>
            <manifestEntries>
              <Add-Opens>java.base/java.io</Add-Opens>
            </manifestEntries>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id> <!-- this is used for inheritance merges -->
            <phase>package</phase> <!-- bind to the packaging phase -->
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <!-- For testing unrelease Java CloudI API changes,
       use a local installation of the cloudi_api_java dependency:
       
       mvn org.apache.maven.plugins:maven-install-plugin:2.5.2:install-file -Dfile=./cloudi_api_java-1.5.4-SNAPSHOT.jar -DgroupId=org.cloudi -DartifactId=cloudi_api_java -Dversion=1.5.4-SNAPSHOT -Dpackaging=jar -DlocalRepositoryPath=lib

  <repositories>
    <repository>
      <id>local-dependencies</id>
      <url>file://${basedir}/lib</url>
    </repository>
  </repositories>
    -->
  <dependencies>
    <dependency>
      <groupId>org.cloudi</groupId>
      <artifactId>cloudi_api_java</artifactId>
      <version>1.7.6</version>
      <classifier>jdk17</classifier>
      <!--<classifier>jdk16</classifier>-->
    </dependency>
    <dependency>
      <groupId>org.grouplens.lenskit</groupId>
      <artifactId>lenskit-knn</artifactId>
      <version>2.2.1</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.21</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>9.3-1104-jdbc4</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.5</version>
    </dependency>
    <dependency>
      <groupId>com.beust</groupId>
      <artifactId>jcommander</artifactId>
      <version>1.47</version>
    </dependency>
  </dependencies>
</project>
